# epml-da-wine-quality

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/processed/: dataset.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
epml_da/: __init__.py  dataset.py  features.py  plots.py
epml_da/modeling/: predict.py  train.py
models/: .gitignore  metrics.json  mlp_metrics.json  rf_metrics.json
notebooks/: 0.01_data_exploration.ipynb  1.01_data_processing.ipynb
reports/: 0.01_data_exploration.md  1.01_data_processing.md  1_initial_report.md
scripts/: compare_metrics.py  dashboard.py  fetch_model_versions.py
