[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "epml_da"
version = "0.0.1"
description = "DS Project to  explore solutions and tools for experimenting"
authors = [
  { name = "exxyyf" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "seaborn (>=0.13.2,<0.14.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["epml_da"]
include = ["pyproject.toml", "epml_da/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["epml_da"]
force-sort-within-sections = true

